[INSTX-10037] Use a new PCH for the tests
Another case of an EXECUTABLE target trying to use a PCH built for a
LIBRARY target.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -124,7 +124,10 @@ target_compile_definitions(dorado_tests_common
 # Finish setting up each target and add them as tests.
 foreach(TEST_BIN dorado_tests dorado_smoke_tests)
     if (DORADO_ENABLE_PCH)
-        target_precompile_headers(${TEST_BIN} REUSE_FROM dorado_pch)
+        target_precompile_headers(${TEST_BIN}
+            PUBLIC
+                "<torch/torch.h>"
+        )
     endif()
 
     target_link_libraries(${TEST_BIN}
