[DOR-1283] Rename FlushOptions to TerminateOptions
Still unsure about the name terminate since these are restartable.

--- a/dorado/read_pipeline/base/CMakeLists.txt
+++ b/dorado/read_pipeline/base/CMakeLists.txt
@@ -6,7 +6,7 @@ dorado_add_library(
     SOURCES_PUBLIC
         ClientInfo.h
         DefaultClientInfo.h
-        flush_options.h
+        terminate_options.h
         HtsReader.h
         messages.h
         MessageSink.h
