DOR-1277: move fasta_fastq_utils and fasta_reader utils into hts_utils

--- a/dorado/hts_utils/CMakeLists.txt
+++ b/dorado/hts_utils/CMakeLists.txt
@@ -6,6 +6,8 @@ dorado_add_library(
     SOURCES_PUBLIC
         bam_utils.h
         fai_utils.h
+        fasta_fastq_utils.h
+        fasta_reader.h
         fastq_reader.h
         FastxRandomReader.h
         hts_file.h
@@ -15,6 +17,8 @@ dorado_add_library(
     SOURCES_PRIVATE
         bam_utils.cpp
         fai_utils.cpp
+        fasta_fastq_utils.cpp
+        fasta_reader.cpp
         fastq_reader.cpp
         FastxRandomReader.cpp
         hts_file.cpp
