DOR-1287: WIP - initial work for WriterNode and hts_writer module - stuck with delegaing control of the progress bar to the writer node - looking to refactor ProgressTracker to pass into pipeline

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -206,6 +206,7 @@ add_subdirectory(dorado/demux)
 add_subdirectory(dorado/devtools)
 add_subdirectory(dorado/file_info)
 add_subdirectory(dorado/hts_utils)
+add_subdirectory(dorado/hts_writer)
 add_subdirectory(dorado/modbase)
 add_subdirectory(dorado/model_downloader)
 add_subdirectory(dorado/models)
@@ -237,6 +238,7 @@ target_link_libraries(dorado_lib
         dorado_correct
         dorado_demux
         dorado_hts_utils
+        dorado_hts_writer
         dorado_modbase
         dorado_poly_tail
         dorado_read_pipeline
