[DOR-1237] Added unit tests for compute_collated_padded_shape to a new test file tests/SecondarySampleCollateUtilsTest.cpp.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -81,6 +81,7 @@ add_executable(dorado_tests
     SecondaryMergeVCSamplesTest.cpp
     SecondaryModelFactory.cpp
     SecondarySampleTest.cpp
+    SecondarySampleCollateUtilsTest.cpp
     SecondaryTrimTest.cpp
     SecondaryWindowTest.cpp
     RleTest.cpp
