Ignore negative values in code coverage
gcovr added the flag --gcov-ignore-parse-errors to work around the bug
in gcov so let's do that since it seems more involved than enabling the
-fprofile-update=atomic flag in the linked bug report.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -111,6 +111,8 @@ endif()
 # For capturing test coverage.
 option(GENERATE_TEST_COVERAGE "Build with code coverage enabled" OFF)
 if (GENERATE_TEST_COVERAGE)
+    # Ignore negative values due to a bug in gcov https://gcc.gnu.org/bugzilla/show_bug.cgi?id=68080
+    set(GCOVR_ADDITIONAL_ARGS "--gcov-ignore-parse-errors=negative_hits.warn")
     include(cmake/CodeCoverage.cmake)
     if (NOT DORADO_DISABLE_TESTS)
         setup_target_for_coverage_gcovr_html(
