DOR-1287: Add WriterNodeTest reusing most of BamWriterTest which is uses legacy HtsWriterNode

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -73,6 +73,7 @@ add_executable(dorado_tests
     TensorUtilsTest.cpp
     TimeUtilsTest.cpp
     TrimTest.cpp
+    WriterNodeTest.cpp
     PafUtilsTest.cpp
     SecondaryDecodeVariantsTest.cpp
     SecondaryKadayashiUtils.cpp
