--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -463,6 +463,7 @@ build_archive:macos:arm:
   stage: test
   variables:
     GIT_STRATEGY: none
+    SAMTOOLS_UNAVAILABLE: sadly_yes
   script:
     # Do everything inside a newly created folder, since some runners only run
     # tests and hence never perform a git clean.
@@ -471,7 +472,9 @@ build_archive:macos:arm:
     - cd test_archive
     - mv ../dist ../tests.archive .
     - !reference [.unzip_test_files]
-    - .\\tests\\test_simple_basecaller_execution.bat .\\dist\\bin\\dorado.exe
+    - bash ./tests/test_simple_basecaller_execution.sh ./dist/bin/dorado ${MODEL} ${BATCH}
+    - bash ./tests/test_expected_logging.sh ./dist/bin/dorado ${MODEL} ${BATCH}
+    - bash ./tests/test_dorado_correct.sh ./dist/bin/dorado
 
 .test_archive:
   stage: test
