[DOR-1315] Implemented a new FastxSequentialReader.

--- a/dorado/hts_utils/CMakeLists.txt
+++ b/dorado/hts_utils/CMakeLists.txt
@@ -10,10 +10,12 @@ dorado_add_library(
         fasta_reader.h
         fastq_reader.h
         FastxRandomReader.h
+        FastxSequentialReader.h
         hts_file.h
         hts_types.h
         KString.h
         MergeHeaders.h
+        sequence_file_format.h
     SOURCES_PRIVATE
         bam_utils.cpp
         fai_utils.cpp
@@ -21,15 +23,18 @@ dorado_add_library(
         fasta_reader.cpp
         fastq_reader.cpp
         FastxRandomReader.cpp
+        FastxSequentialReader.cpp
         hts_file.cpp
         hts_types.cpp
         KString.cpp
         MergeHeaders.cpp
+        sequence_file_format.cpp
     DEPENDS_PUBLIC
         # nothing
     DEPENDS_PRIVATE
         dorado_utils
         htslib
         spdlog::spdlog
+        ZLIB::ZLIB
     NO_TORCH
 )
