--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -439,6 +439,8 @@ build_archive:macos:arm:
     NO_TEST_DORADO_CORRECT: 0
     NO_TEST_DORADO_POLISH: 0
     NO_TEST_DUPLEX: 0
+    VALIDATE_FASTQ: 1
+    PYTHON: python3
   script:
     # Do everything inside a newly created folder, since some runners only run
     # tests and hence never perform a git clean.
@@ -464,6 +466,8 @@ build_archive:macos:arm:
   variables:
     GIT_STRATEGY: none
     SAMTOOLS_UNAVAILABLE: sadly_yes
+    VALIDATE_FASTQ: 1
+    PYTHON: python
   script:
     # Do everything inside a newly created folder, since some runners only run
     # tests and hence never perform a git clean.
