[DOR-1315] Added unit tests to tests/FastxSequentialReaderTest.cpp.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -32,6 +32,7 @@ add_executable(dorado_tests
     fasta_reader_test.cpp
     fastq_reader_test.cpp
     FastxRandomReaderTest.cpp
+    FastxSequentialReaderTest.cpp
     FileInfoTest.cpp
     gpu_monitor_test.cpp
     gzip_reader_test.cpp
