[DOR-1315] Added unit tests for parsing the HTS-style tags to tests/FastqTagsTest.cpp.

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -33,6 +33,7 @@ add_executable(dorado_tests
     fastq_reader_test.cpp
     FastxRandomReaderTest.cpp
     FastxSequentialReaderTest.cpp
+    FastqTagsTest.cpp
     FileInfoTest.cpp
     gpu_monitor_test.cpp
     gzip_reader_test.cpp
