DOR-1275: Refactoring based on code review.

--- a/dorado/demux/CMakeLists.txt
+++ b/dorado/demux/CMakeLists.txt
@@ -14,6 +14,7 @@ dorado_add_library(
         parse_custom_kit.h
         Trimmer.h
     SOURCES_PRIVATE
+        adapter_info.cpp
         adapter_primer_kits.cpp
         adapter_primer_kits.h
         AdapterDetector.cpp
