--- a/.gitlab/build-ont_core.yml
+++ b/.gitlab/build-ont_core.yml
@@ -36,3 +36,12 @@ build:macos:arm:ont_core:
     - .macos_arm_runner
     - .test_ont_core_compatibility
     - .on_nightly_or_manual
+  script:
+    # The ont_core build expects to be using conan 1.x, so install it
+    # into a venv.
+    - python3 -m venv build_venv
+    - source build_venv/*/activate
+    - python --version
+    - pip install -U "conan<2"
+    - conan --version
+    - !reference [.test_ont_core_compatibility, script]
