free up swap space

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -18,8 +18,10 @@ jobs:
       if: matrix.os == 'ubuntu-24.04'
       run: |
         sudo rm -rf /usr/share/dotnet /opt/ghc /usr/local/share/boost /usr/local/lib/android "$AGENT_TOOLSDIRECTORY"
+        sudo swapoff -a || true
+        sudo rm -f /mnt/swapfile || true
     - name: Set up cmake
-      uses: jwlawson/actions-setup-cmake@v2.0.2
+      uses: jwlawson/actions-setup-cmake@v2.0.ls2
       with:
         cmake-version: '3.25.x'
     - uses: Jimver/cuda-toolkit@v0.2.26
