DOR-738: Remove argparse dependency from dorado/utils
The only thing this was now being used for was setting up the devopts option, and that is only done in cli_lib (except for minimap2_args, which has no business using devopts anyway)

--- a/dorado/alignment/CMakeLists.txt
+++ b/dorado/alignment/CMakeLists.txt
@@ -31,6 +31,7 @@ dorado_add_library(
         dorado_utils
     DEPENDS_PRIVATE
         spdlog::spdlog
+        argparse::argparse
     # Minimap2Aligner.cpp was moved to another target to allow
     # this one to be torch-less.
     NO_TORCH
