DOR-1353 Normalise the name and version number format of gsl-lite dependencies

--- a/dorado/3rdparty/software_versions.yml
+++ b/dorado/3rdparty/software_versions.yml
@@ -72,10 +72,11 @@ elzip:
     license: elzip/LICENSE
     files:
         - elzip
-gsl-lite:
+GSL Lite:
     description: >
-        A single-file header-only version of ISO C++ Guidelines Support Library (GSL) for C++98, C++11, and later
-    version: "v0.38.1"
+        Functions and types suggested for use by the C++ Core Guidelines
+        <https://github.com/isocpp/CppCoreGuidelines>.
+    version: "0.38.1"
     url: https://github.com/gsl-lite/gsl-lite
     license: PATH_NOT_AVAILABLE
     files:
