[DOR-1358] Refactored reorder_reads and moved the core (reorder_chunk) to a new file dorado/secondary/features/encoder_utils.cpp so it can be tested.

--- a/dorado/secondary/features/CMakeLists.txt
+++ b/dorado/secondary/features/CMakeLists.txt
@@ -18,6 +18,8 @@ dorado_add_library(
         encoder_factory.cpp
         encoder_read_alignment.cpp
         encoder_read_alignment.h
+        encoder_utils.cpp
+        encoder_utils.h
         kadayashi_utils.cpp
         medaka_bamiter.cpp
         medaka_bamiter.h
