[INSTX-11681] Factor out the stream logic to a separate class
We'll want to reuse some of this, and it could be useful to others, so
move it into utils.

--- a/dorado/utils/CMakeLists.txt
+++ b/dorado/utils/CMakeLists.txt
@@ -35,6 +35,7 @@ dorado_add_library(
         rle.h
         SampleSheet.h
         scoped_trace_log.h
+        SeparatedStream.h
         sequence_utils.h
         span.h
         ssize.h
