--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -81,6 +81,7 @@ add_executable(dorado_tests
     SecondarySampleTest.cpp
     SecondaryTrimTest.cpp
     SecondaryWindowTest.cpp
+    SeparatedStreamTest.cpp
     SequenceUtilsTest.cpp
     StereoDuplexTest.cpp
     StitchTest.cpp
