DOR-1332: add ModelResolver module

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,6 +202,7 @@ add_subdirectory(dorado/file_info)
 add_subdirectory(dorado/hts_utils)
 add_subdirectory(dorado/hts_writer)
 add_subdirectory(dorado/modbase)
+add_subdirectory(dorado/model_resolver)
 add_subdirectory(dorado/model_downloader)
 add_subdirectory(dorado/models)
 add_subdirectory(dorado/nn)
