--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -502,6 +502,7 @@ build_archive:macos:arm:
     - !reference [.unzip_test_files]
     - bash ./tests/test_simple_basecaller_execution.sh ./dist/bin/dorado ${MODEL} ${BATCH}
     - bash ./tests/test_expected_logging.sh ./dist/bin/dorado ${MODEL} ${BATCH}
+    - bash ./tests/test_model_resolution.sh ./dist/bin/dorado
     - bash ./tests/test_dorado_correct.sh ./dist/bin/dorado
     - bash ./tests/test_dorado_correct_cram.sh ./dist/bin/dorado
     - bash ./tests/test_dorado_polish.sh ./dist/bin/dorado
@@ -529,6 +530,7 @@ build_archive:macos:arm:
     - !reference [.unzip_test_files]
     - bash ./tests/test_simple_basecaller_execution.sh ./dist/bin/dorado ${MODEL} ${BATCH}
     - bash ./tests/test_expected_logging.sh ./dist/bin/dorado ${MODEL} ${BATCH}
+    - bash ./tests/test_model_resolution.sh ./dist/bin/dorado
     - bash ./tests/test_dorado_correct.sh ./dist/bin/dorado
 
 .extract_archive:
